force-app/main/default/objects/G_Customer__c/G_Customer__c.object-meta.xml
<CustomObject>
    <label>G Customer</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>G Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>