force-app/main/default/objects/G_Customer__c/fields/G_Advisory_Classification__c.field-meta.xml
<CustomField>
    <fullName>G_Advisory_Classification__c</fullName>
    <label>G Advisory Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
            <value>
                <fullName>P4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>