force-app/main/default/objects/G_Customer__c/fields/G_Apps_Owner__c.field-meta.xml
<CustomField>
    <fullName>G_Apps_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>G Apps Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GCustomers1</relationshipName>
    <type>Lookup</type>
</CustomField>