force-app/main/default/objects/G_Customer__c/fields/G_DPS_Owner__c.field-meta.xml
<CustomField>
    <fullName>G_DPS_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>G DPS Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GCustomers2</relationshipName>
    <type>Lookup</type>
</CustomField>