force-app/main/default/objects/G_Customer__c/fields/G_DPS_Priority__c.field-meta.xml
<CustomField>
    <fullName>G_DPS_Priority__c</fullName>
    <label>G DPS Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1 - Stay Strategic</fullName>
            </value>
            <value>
                <fullName>P2 - Become Strategic</fullName>
            </value>
            <value>
                <fullName>P3 - Keep &amp; Grow</fullName>
            </value>
            <value>
                <fullName>P4 - Grow Local</fullName>
            </value>
            <value>
                <fullName>P5A - Grow</fullName>
            </value>
            <value>
                <fullName>P5B - Grow</fullName>
            </value>
            <value>
                <fullName>P5C - Optimize</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>