force-app/main/default/objects/G_Customer__c/fields/G_Name__c.field-meta.xml
<CustomField>
    <fullName>G_Name__c</fullName>
    <label>G Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>