force-app/main/default/objects/G_Customer__c/fields/G_Region__c.field-meta.xml
<CustomField>
    <fullName>G_Region__c</fullName>
    <label>G Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Region</valueSetName>
    </valueSet>
</CustomField>