force-app/main/default/objects/G_Customer__c/validationRules/Name_is_ReadOnly.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_is_ReadOnly</fullName>
    <active>true</active>
    <description>Sorry, You can not modify GCustomer Name. Master data is in Navision.</description>
    <errorConditionFormula>AND(ISCHANGED( Name ),$User.Username !=&apos;servicenow.integrationuser@soprasteria.com&apos;)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Sorry, You can not modify G Customer Name. Master data is in Navision.</errorMessage>
</ValidationRule>