force-app/main/default/objects/G_Customer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>G_Name__c</columns>
    <columns>G_Region__c</columns>
    <columns>G_Sector__c</columns>
    <columns>G_Classification__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>